--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button id = "addItem"> + </button>   
             
         </div>
-        <div class="grid-item"> <button id ="save"> Save</button> </div>
+        <div class="grid-item"> </div>
 
       </div>
  
