--- a/index.html
+++ b/index.html
@@ -17,33 +17,17 @@
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item">
-            <ul id = "toDo">
-                <!--
-                <li><input type = "checkbox" name ="Handla">
-                    <label>Handla</label></li>
-                <li><input type = "checkbox" name ="Tvätta">
-                    <label>Tvätta</label></li>
-                <li><input type = "checkbox" name ="Baka">
-                    <label>Baka</label></li>
-                -->
-
-            </ul>
-
+            <ul id = "toDo"></ul>
         </div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item">
             <input id = addItemField type = "text">
-            <button id = "addItem"> + </button>   
-            
+            <button id = "addItem"> + </button>     
         </div>
         <div class="grid-item"> </div>
 
       </div>
- 
-
-
-    
 
     <script src="script.js"></script>
 </body>
