--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <input id = addItemField type = "text">
             <button id = "addItem"> + </button>     
         </div>
-        <div class="grid-item"> </div>
+        <div class="grid-item"><button id="emptyList"> Empty list</button> </div>
 
       </div>
 
